# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: prepare_commit_message.py
