[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Some hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lowess/pre-commit-hooks
author = Florian Dambrine
author_email = android.florian@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    black
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    prepare-commit-message = pre_commit_hooks.prepare_commit_message:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006,W503,E203

